# solo_forge

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT-soloforge-dev.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SETUP.md  package.json
.claude/: settings.local.json
.trae/rules/: project_rules.md
admin-frontend/: package-lock.json  package.json
admin-frontend/app/: globals.css  layout.tsx
admin-frontend/lib/: supabase.ts
backend/: .env.example  Cargo.toml  database_schema.sql  next.config.tsx
backend/app/: layout.tsx
backend/app/api/auth/register/: route.ts
backend/app/api/products/: route.ts
backend/app/api/upload/: route.ts
backend/app/auth/signin/: page.tsx
backend/app/auth/signup/: page.tsx
backend/components/auth/: SignInForm.tsx  SignUpForm.tsx
backend/components/ui/: ImageUpload.tsx
backend/lib/: auth.ts  upload.ts
backend/src/: db.rs  handlers.rs  i18n.rs  main.rs  models.rs
docs/: SoloForge-独立开发者产品收录平台需求文档（v1.3 正式版）.md  Supabase-Auth-登录配置.md  icons.md  login.html  数据库信息.md
docs/pay/: llms-full.txt
frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  robots.ts  sitemap.ts
frontend/components/: CategoryList.tsx  DeveloperPopularitySidebar.tsx  Footer.tsx  Header.tsx  Hero.tsx  HomeRightSidebar.tsx  InteractionEffects.tsx  KofiSponsorDialog.tsx  LanguageSwitcher.tsx  ProductCard.tsx  ProductGrid.tsx  SubmitForm.tsx
frontend/i18n/: request.ts  routing.ts
frontend/lib/: backend-api.ts  supabase.ts  utils.ts
messages/: en.json  zh.json
(+72 files in other folders)
